--- a/primary_classification.ipynb
+++ b/primary_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 1,
    "id": "b10c8f4c",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
+   "id": "831d3ed5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "2c0194fb",
    "metadata": {},
    "outputs": [],
@@ -37,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "id": "ba424d12",
    "metadata": {},
    "outputs": [],
@@ -46,19 +56,19 @@
     "\n",
     "data_train = np.load(r'Full Dataset/primary categories - Train.npz')\n",
     "data_validation = np.load(r'Full Dataset/primary categories - Validation.npz')\n",
-    "data_Test = np.load(r'Full Dataset/primary categories - Test.npz')\n",
+    "data_test = np.load(r'Full Dataset/primary categories - Test.npz')\n",
     "\n",
     "\n",
     "#t extract the arrays from dataset into input(images) and target(labels)\n",
     "images_train = data_train['images']\n",
     "labels_train = data_train['labels']\n",
     "\n",
-    "images_val = data_train['images']\n",
-    "labels_val = data_train['labels']\n",
+    "images_val = data_validation['images']\n",
+    "labels_val = data_validation['labels']\n",
     "\n",
     "\n",
-    "images_test = data_train['images']\n",
-    "labels_test = data_train['labels']\n",
+    "images_test = data_test['images']\n",
+    "labels_test = data_test['labels']\n",
     "\n",
     "#Pixel-wise normalization of the training, validation and testing data\n",
     "images_train = images_train/255.0\n",
@@ -73,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 4,
    "id": "2ab0b511",
    "metadata": {},
    "outputs": [],
@@ -84,8 +94,8 @@
     "EPOCHS = 1\n",
     "\n",
     "#Define the hyperparamets to tune and the variations we want to test.\n",
-    "HP_FILTER_SIZE = hp.HParam('filter_size', hp.Discrete([3,5,7]))\n",
-    "HP_FILTER_NUM = hp.HParam('filter_num', hp.Discrete(['32','64','96', '128']))\n",
+    "HP_FILTER_SIZE = hp.HParam('filter_size', hp.Discrete([3]))\n",
+    "HP_FILTER_NUM = hp.HParam('filter_num', hp.Discrete(['32','64']))\n",
     "\n",
     "METRIC_ACCURACY = 'accuracy'\n",
     "\n",
@@ -100,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "id": "61fc1c09",
+   "execution_count": 5,
+   "id": "7cc26778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,11 +120,12 @@
     "#Stop the model from overfitting ie whenever the validation loss increases\n",
     "#the code tells the model to stop when the val_loss starts to increase in two subsequent epochs\n",
     "\n",
-    "#directory to store the TensorBoard logs  \n",
-    "session_num = 0\n",
-    "log_dir = f\"Logs/Model 1/fit/run-{session_num}\"\n",
-    "summary_writer = tf.summary.create_file_writer(log_dir +'/cm')\n",
+    "#directory to store the cm logs  \n",
     "\n",
+    "\n",
+    "\n",
+    "\n",
+    "session_num = 1\n",
     "def train_model(hparams,session_num):\n",
     "    \n",
     "    \n",
@@ -137,60 +148,81 @@
     "\n",
     "#Compile the model\n",
     "    model.compile(optimizer='adam', loss=loss_fn, metrics=['accuracy'])\n",
+    "    log_dir = f\"Logs/Model 1/fit/run-{session_num}\"\n",
+    "\n",
+    "    \n",
+    "  \n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Create a Confusion Matrix\n",
-    "\n",
-    "    def make_predictions(images_val):\n",
-    "        predictions = model.predict(images_val)\n",
-    "        return predictions\n",
-    "\n",
-    "\n",
-    "\n",
-    "        \n",
-    "    def confusion_matrix_callback(epoch,log=None):\n",
-    "\n",
-    "        val_predict_raw= make_predictions(images_val)\n",
-    "        val_predict = np.argmax(val_predict_raw, axis =1)\n",
-    "\n",
-    "\n",
-    "\n",
-    "        cm = confusion_matrix(labels_val, val_predict)\n",
+    " #Create a Confusion Matrix\n",
     "        \n",
     "        \n",
-    "         \n",
-    "# log the confusion matrix as a heatmap\n",
+    "        \n",
+    "#Plot_to_image\n",
     "\n",
-    "    def log_confusion_matrix_to_tensorboard(cm,class_labels):\n",
-    "     \n",
+    "    def plot_to_cm_image(cm, class_labels):\n",
+    "        \n",
+    "        fig, ax = plt.subplots(figsize=(6, 6))\n",
+    "       \n",
     "\n",
-    "\n",
-    "        plt.figure(figsize=(6, 6))\n",
     "        sns.set(font_scale=1.2)  # Adjust the font size\n",
-    "        sns.heatmap(cm, annot=True, fmt=\"d\", cmap=\"Blues\", square=True,\n",
+    "        sns.heatmap(cm, annot=True, fmt=\"0.2f\", cmap=\"Blues\", square=True,\n",
     "                    xticklabels=class_labels,\n",
-    "                    yticklabels=class_labels)\n",
-    "\n",
-    "\n",
+    "                    yticklabels=class_labels, ax=ax)\n",
     "        plt.xlabel('Predicted')\n",
     "        plt.ylabel('Actual')\n",
     "        plt.title('Confusion Matrix')\n",
-    "         \n",
+    "        plt.close(fig)\n",
+    "               \n",
     "        \n",
-    "        with summary_writer.as_default():\n",
+    "# Convert the plot to a NumPy array\n",
+    "    \n",
+    "        fig.canvas.draw()\n",
+    "        plt_image = np.array(fig.canvas.renderer.buffer_rgba())\n",
+    "#         plt_image = np.frombuffer(plt.gcf().canvas.tostring_rgb(), dtype=np.uint8)\n",
+    "#         plt_image = plt_image.reshape(plt.gcf().canvas.get_width_height()[::-1] + (3,))\n",
+    "        \n",
+    "        #Convert the array image to a tensor image of 4 dimensions for compartibility with TensorFlow\n",
+    "        image_tensor = tf.convert_to_tensor(plt_image)  # Convert to a TensorFlow tensor\n",
+    "        image_tensor = tf.expand_dims(image_tensor, axis=0)  # Add the batch dimension\n",
     "\n",
-    "            tf.summary.image('Confusion Matrix', [plt.gcf()], step=step)\n",
-    "            log_confusion_matrix_to_tensorboard(cm, class_labels= [\"Glasses/SUnglassses\", \"Trousers/Jeans\", \"Shoes\"],\n",
-    "            step=0) \n",
+    "        return image_tensor\n",
+    "    \n",
+    "       \n",
+    "        \n",
+    "\n",
+    "        \n",
+    "        \n",
+    "    # log the confusion matrix as a heatmap\n",
+    "    \n",
+    "    confusion_matrix_writer = tf.summary.create_file_writer(log_dir +'/cm')\n",
+    "\n",
+    "    def log_confusion_matrix_to_tensorboard(epoch,log=None):\n",
+    "        val_predict_raw= model.predict(images_val)\n",
+    "        val_predict = np.argmax(val_predict_raw, axis =1)\n",
+    "\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        #Get the confusion matrix\n",
+    "        cm_raw = confusion_matrix(labels_val, val_predict).astype('float')\n",
+    "        #Normalize the confusion matrix(cm) row-wise\n",
+    "        cm = cm_raw/cm_raw.sum(axis=1)[:,np.newaxis]\n",
+    "        cm = np.round(cm, 2)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        class_labels= [\"Glasses/Sunglassses\", \"Trousers/Jeans\", \"Shoes\"]\n",
+    "        cm_image = plot_to_cm_image(cm, class_labels)\n",
+    "\n",
+    "        #Log the cm as an iomage summary\n",
+    "        with confusion_matrix_writer.as_default():\n",
+    "\n",
+    "            tf.summary.image('Confusion Matrix', cm_image, step=epoch)\n",
     "            \n",
-    "      \n",
     "\n",
     "\n",
-    "\n",
-    "    cm_callback = tf.keras.callbacks.LambdaCallback(on_train_end=confusion_matrix_callback)\n",
+    "    cm_callback = tf.keras.callbacks.LambdaCallback(on_epoch_end=log_confusion_matrix_to_tensorboard)\n",
     "    tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
     "\n",
     "\n",
@@ -217,38 +249,92 @@
     "\n",
     "    _,accuracy = model.evaluate(images_val, labels_val)\n",
     "\n",
-    "#     model.save(f\"Logs/Model 1/fit/run-{session_num}\")\n",
+    "    model.save(f\"Saved/Model 1/run-{session_num}\")\n",
     "\n",
     "\n",
     "    return accuracy\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "   \n",
-    "   "
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 6,
    "id": "4fb505ee",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Starting trial: run-1\n",
+      "{'filter_size': 3, 'filter_num': '32'}\n",
+      "51/51 [==============================] - 2s 29ms/step\n",
+      "203/203 - 41s - loss: 0.0864 - accuracy: 0.9722 - val_loss: 0.0062 - val_accuracy: 0.9994 - 41s/epoch - 201ms/step\n",
+      "51/51 [==============================] - 2s 30ms/step - loss: 0.0062 - accuracy: 0.9994\n",
+      "INFO:tensorflow:Assets written to: Saved/Model 1/run-1\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: Saved/Model 1/run-1\\assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "---Starting trial: run-2\n",
+      "{'filter_size': 3, 'filter_num': '64'}\n",
+      "51/51 [==============================] - 2s 29ms/step\n",
+      "203/203 - 41s - loss: 0.0967 - accuracy: 0.9674 - val_loss: 0.0048 - val_accuracy: 0.9988 - 41s/epoch - 203ms/step\n",
+      "51/51 [==============================] - 2s 32ms/step - loss: 0.0048 - accuracy: 0.9988\n",
+      "INFO:tensorflow:Assets written to: Saved/Model 1/run-2\\assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: Saved/Model 1/run-2\\assets\n"
+     ]
+    }
+   ],
    "source": [
-    "#Log the confusion matrix and the hyperparameter to the TensorBoard\n",
+    "#Log the hyperparameter to the TensorBoard\n",
+    "\n",
     "\n",
     "def run(log_dir,hparams,session_num):\n",
+    "    hyperparameter_writer = tf.summary.create_file_writer(log_dir)\n",
     "    \n",
-    "    summary_writer = tf.summary.create_file_writer(log_dir)\n",
     "    \n",
-    "    with summary_writer.as_default():\n",
+    "    with hyperparameter_writer.as_default():\n",
     "        hp.hparams(hparams) #record the values used in this trial\n",
     "        accuracy = train_model(hparams, session_num)\n",
     "        tf.summary.scalar(METRIC_ACCURACY, accuracy, step=1)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "#Train the model with the different hyperparameters\n",
+    "session_num:1\n",
+    "for filter_size in HP_FILTER_SIZE.domain.values:\n",
+    "    for filter_num in HP_FILTER_NUM.domain.values:\n",
+    "        hparams ={\n",
+    "        HP_FILTER_SIZE: filter_size,\n",
+    "        HP_FILTER_NUM : filter_num\n",
+    "        }\n",
+    "        \n",
+    "        run_name = \"run-%d\" % session_num\n",
+    "        print('---Starting trial: %s' % run_name)\n",
+    "        print({h.name: hparams[h] for h in hparams})\n",
+    "        run('Logs/Model 1/hparam_tuning/' + run_name, hparams, session_num)\n",
+    "        \n",
+    "        session_num += 1\n",
     "       \n",
     "        \n",
     "\n",
@@ -266,130 +352,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "c60a19ba",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "---Starting trial: run-1\n",
-      "{'filter_size': 3, 'filter_num': '128'}\n",
-      "203/203 - 132s - loss: 0.0750 - accuracy: 0.9747 - val_loss: 0.0099 - val_accuracy: 0.9990 - 132s/epoch - 649ms/step\n",
-      "406/406 [==============================] - 21s 50ms/step\n",
-      "406/406 [==============================] - 25s 61ms/step - loss: 0.0099 - accuracy: 0.9990\n",
-      "---Starting trial: run-2\n",
-      "{'filter_size': 3, 'filter_num': '32'}\n",
-      "203/203 - 128s - loss: 0.1117 - accuracy: 0.9677 - val_loss: 0.0124 - val_accuracy: 0.9988 - 128s/epoch - 629ms/step\n",
-      "406/406 [==============================] - 24s 60ms/step\n",
-      "406/406 [==============================] - 27s 66ms/step - loss: 0.0124 - accuracy: 0.9988\n",
-      "---Starting trial: run-3\n",
-      "{'filter_size': 3, 'filter_num': '64'}\n",
-      "203/203 - 134s - loss: 0.0926 - accuracy: 0.9746 - val_loss: 0.0107 - val_accuracy: 0.9987 - 134s/epoch - 659ms/step\n",
-      "406/406 [==============================] - 18s 44ms/step\n",
-      "406/406 [==============================] - 24s 60ms/step - loss: 0.0107 - accuracy: 0.9987\n",
-      "---Starting trial: run-4\n",
-      "{'filter_size': 3, 'filter_num': '96'}\n",
-      "203/203 - 107s - loss: 0.0905 - accuracy: 0.9718 - val_loss: 0.0122 - val_accuracy: 0.9990 - 107s/epoch - 528ms/step\n",
-      "406/406 [==============================] - 22s 55ms/step\n",
-      "406/406 [==============================] - 23s 55ms/step - loss: 0.0122 - accuracy: 0.9990\n",
-      "---Starting trial: run-5\n",
-      "{'filter_size': 5, 'filter_num': '128'}\n",
-      "203/203 - 93s - loss: 0.0850 - accuracy: 0.9738 - val_loss: 0.0211 - val_accuracy: 0.9985 - 93s/epoch - 459ms/step\n",
-      "406/406 [==============================] - 23s 56ms/step\n",
-      "406/406 [==============================] - 21s 51ms/step - loss: 0.0211 - accuracy: 0.9985\n",
-      "---Starting trial: run-6\n",
-      "{'filter_size': 5, 'filter_num': '32'}\n",
-      "203/203 - 85s - loss: 0.0924 - accuracy: 0.9752 - val_loss: 0.0262 - val_accuracy: 0.9982 - 85s/epoch - 420ms/step\n",
-      "406/406 [==============================] - 21s 52ms/step\n",
-      "406/406 [==============================] - 26s 63ms/step - loss: 0.0262 - accuracy: 0.9982\n",
-      "---Starting trial: run-7\n",
-      "{'filter_size': 5, 'filter_num': '64'}\n",
-      "203/203 - 85s - loss: 0.0917 - accuracy: 0.9721 - val_loss: 0.0133 - val_accuracy: 0.9986 - 85s/epoch - 419ms/step\n",
-      "406/406 [==============================] - 21s 53ms/step\n",
-      "406/406 [==============================] - 20s 50ms/step - loss: 0.0133 - accuracy: 0.9986\n",
-      "---Starting trial: run-8\n",
-      "{'filter_size': 5, 'filter_num': '96'}\n",
-      "203/203 - 96s - loss: 0.0720 - accuracy: 0.9809 - val_loss: 0.0151 - val_accuracy: 0.9985 - 96s/epoch - 475ms/step\n",
-      "406/406 [==============================] - 22s 53ms/step\n",
-      "406/406 [==============================] - 22s 55ms/step - loss: 0.0151 - accuracy: 0.9985\n",
-      "---Starting trial: run-9\n",
-      "{'filter_size': 7, 'filter_num': '128'}\n",
-      "203/203 - 100s - loss: 0.0840 - accuracy: 0.9745 - val_loss: 0.0137 - val_accuracy: 0.9981 - 100s/epoch - 492ms/step\n",
-      "406/406 [==============================] - 22s 54ms/step\n",
-      "406/406 [==============================] - 22s 54ms/step - loss: 0.0137 - accuracy: 0.9981\n",
-      "---Starting trial: run-10\n",
-      "{'filter_size': 7, 'filter_num': '32'}\n",
-      "203/203 - 95s - loss: 0.0768 - accuracy: 0.9777 - val_loss: 0.0314 - val_accuracy: 0.9904 - 95s/epoch - 467ms/step\n",
-      "406/406 [==============================] - 23s 55ms/step\n",
-      "406/406 [==============================] - 22s 54ms/step - loss: 0.0314 - accuracy: 0.9904\n",
-      "---Starting trial: run-11\n",
-      "{'filter_size': 7, 'filter_num': '64'}\n",
-      "203/203 - 97s - loss: 0.0766 - accuracy: 0.9741 - val_loss: 0.0154 - val_accuracy: 0.9979 - 97s/epoch - 479ms/step\n",
-      "406/406 [==============================] - 23s 56ms/step\n",
-      "406/406 [==============================] - 23s 56ms/step - loss: 0.0154 - accuracy: 0.9979\n",
-      "---Starting trial: run-12\n",
-      "{'filter_size': 7, 'filter_num': '96'}\n",
-      "203/203 - 92s - loss: 0.0809 - accuracy: 0.9729 - val_loss: 0.0117 - val_accuracy: 0.9983 - 92s/epoch - 451ms/step\n",
-      "406/406 [==============================] - 22s 55ms/step\n",
-      "406/406 [==============================] - 21s 52ms/step - loss: 0.0117 - accuracy: 0.9983\n"
-     ]
-    }
-   ],
-   "source": [
-    "        \n",
-    "#Train the model with the different hyperparameters\n",
-    "session_num = 1\n",
-    "for filter_size in HP_FILTER_SIZE.domain.values:\n",
-    "    for filter_num in HP_FILTER_NUM.domain.values:\n",
-    "        hparams ={\n",
-    "        HP_FILTER_SIZE: filter_size,\n",
-    "        HP_FILTER_NUM : filter_num\n",
-    "        }\n",
-    "        \n",
-    "        run_name = \"run-%d\" % session_num\n",
-    "        print('---Starting trial: %s' % run_name)\n",
-    "        print({h.name: hparams[h] for h in hparams})\n",
-    "        run('Logs/Model 1/hparam_tuning/' + run_name, hparams, session_num)\n",
-    "        \n",
-    "        session_num += 1"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 7,
    "id": "a38f19ed",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 8096), started 0:42:41 ago. (Use '!kill 8096' to kill it.)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-430846e38d4eda9\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-388c8002984d3a9\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-430846e38d4eda9\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-388c8002984d3a9\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -415,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "6e1505de",
    "metadata": {},
    "outputs": [
@@ -431,11 +416,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-54badd3d91d864fa\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-6db4a443b047cca4\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-54badd3d91d864fa\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-6db4a443b047cca4\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -484,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
